// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`evo-filter-input > renders default input 1`] = `
<DocumentFragment>
  <span
    class="filter-input"
  >
    <div
      class="textbox textbox--fluid"
      placeholder=""
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-0"
          viewBox="0 0 16 16"
        >
          <path
            d="M3 6.5a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0Zm11.76 6.85-.021-.01-3.71-3.681-.025-.008A5.465 5.465 0 0 0 12 6.5 5.5 5.5 0 1 0 6.5 12a5.47 5.47 0 0 0 3.118-.972l3.732 3.732a1 1 0 0 0 1.41-1.41Z"
          />
        </symbol>
        <use
          href="#icon-search-16"
        />
      </svg>
      <input
        aria-describedby="sM_2 sM_3"
        aria-label="Filter input"
        class="textbox__control"
        id="GENERATED-1"
        type="search"
      />
      <button
        aria-label="Clear filter input"
        class="icon-btn icon-btn--transparent icon-btn--small"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 16 16"
          >
            <path
              d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm3.71 10.29a1 1 0 1 1-1.41 1.41L8 9.41l-2.29 2.3A1 1 0 0 1 4.3 10.3L6.59 8l-2.3-2.29a1.004 1.004 0 0 1 1.42-1.42L8 6.59l2.29-2.29a1 1 0 0 1 1.41 1.41L9.41 8l2.3 2.29Z"
            />
          </symbol>
          <use
            href="#icon-clear-16"
          />
        </svg>
      </button>
    </div>
  </span>
</DocumentFragment>
`;

exports[`evo-filter-input > renders large 1`] = `
<DocumentFragment>
  <span
    class="filter-input filter-input--large"
  >
    <div
      class="textbox textbox--fluid"
      placeholder=""
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-0"
          viewBox="0 0 16 16"
        >
          <path
            d="M3 6.5a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0Zm11.76 6.85-.021-.01-3.71-3.681-.025-.008A5.465 5.465 0 0 0 12 6.5 5.5 5.5 0 1 0 6.5 12a5.47 5.47 0 0 0 3.118-.972l3.732 3.732a1 1 0 0 0 1.41-1.41Z"
          />
        </symbol>
        <use
          href="#icon-search-16"
        />
      </svg>
      <input
        aria-describedby="sM_2 sM_3"
        aria-label="Filter input"
        class="textbox__control"
        id="GENERATED-1"
        type="search"
      />
      <button
        aria-label="Clear filter input"
        class="icon-btn icon-btn--transparent icon-btn--small"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 16 16"
          >
            <path
              d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm3.71 10.29a1 1 0 1 1-1.41 1.41L8 9.41l-2.29 2.3A1 1 0 0 1 4.3 10.3L6.59 8l-2.3-2.29a1.004 1.004 0 0 1 1.42-1.42L8 6.59l2.29-2.29a1 1 0 0 1 1.41 1.41L9.41 8l2.3 2.29Z"
            />
          </symbol>
          <use
            href="#icon-clear-16"
          />
        </svg>
      </button>
    </div>
  </span>
</DocumentFragment>
`;

exports[`evo-filter-input > renders small 1`] = `
<DocumentFragment>
  <span
    class="filter-input filter-input--small"
  >
    <div
      class="textbox textbox--fluid"
      placeholder=""
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-0"
          viewBox="0 0 16 16"
        >
          <path
            d="M3 6.5a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0Zm11.76 6.85-.021-.01-3.71-3.681-.025-.008A5.465 5.465 0 0 0 12 6.5 5.5 5.5 0 1 0 6.5 12a5.47 5.47 0 0 0 3.118-.972l3.732 3.732a1 1 0 0 0 1.41-1.41Z"
          />
        </symbol>
        <use
          href="#icon-search-16"
        />
      </svg>
      <input
        aria-describedby="sM_2 sM_3"
        aria-label="Filter input"
        class="textbox__control"
        id="GENERATED-1"
        type="search"
      />
      <button
        aria-label="Clear filter input"
        class="icon-btn icon-btn--transparent icon-btn--small"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 16 16"
          >
            <path
              d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm3.71 10.29a1 1 0 1 1-1.41 1.41L8 9.41l-2.29 2.3A1 1 0 0 1 4.3 10.3L6.59 8l-2.3-2.29a1.004 1.004 0 0 1 1.42-1.42L8 6.59l2.29-2.29a1 1 0 0 1 1.41 1.41L9.41 8l2.3 2.29Z"
            />
          </symbol>
          <use
            href="#icon-clear-16"
          />
        </svg>
      </button>
    </div>
  </span>
</DocumentFragment>
`;

exports[`evo-filter-input > renders with aria-controls 1`] = `
<DocumentFragment>
  <div>
    <span
      class="filter-input"
    >
      <div
        class="textbox textbox--fluid"
        placeholder=""
      >
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-0"
            viewBox="0 0 16 16"
          >
            <path
              d="M3 6.5a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0Zm11.76 6.85-.021-.01-3.71-3.681-.025-.008A5.465 5.465 0 0 0 12 6.5 5.5 5.5 0 1 0 6.5 12a5.47 5.47 0 0 0 3.118-.972l3.732 3.732a1 1 0 0 0 1.41-1.41Z"
            />
          </symbol>
          <use
            href="#icon-search-16"
          />
        </svg>
        <input
          aria-controls="filter-input-controls"
          aria-describedby="sM_2 sM_3"
          aria-label="Filter input"
          class="textbox__control"
          id="GENERATED-1"
          type="search"
          value=""
        />
        <button
          aria-label="Clear filter input"
          class="icon-btn icon-btn--transparent icon-btn--small"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="icon icon--16"
          >
            <symbol
              id="GENERATED-2"
              viewBox="0 0 16 16"
            >
              <path
                d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm3.71 10.29a1 1 0 1 1-1.41 1.41L8 9.41l-2.29 2.3A1 1 0 0 1 4.3 10.3L6.59 8l-2.3-2.29a1.004 1.004 0 0 1 1.42-1.42L8 6.59l2.29-2.29a1 1 0 0 1 1.41 1.41L9.41 8l2.3 2.29Z"
              />
            </symbol>
            <use
              href="#icon-clear-16"
            />
          </svg>
        </button>
      </div>
    </span>
    <div
      id="filter-input-controls"
    >
      Current value: "‍"
    </div>
  </div>
</DocumentFragment>
`;

exports[`evo-filter-input > renders with custom placeholder and aria label 1`] = `
<DocumentFragment>
  <span
    class="filter-input"
  >
    <div
      class="textbox textbox--fluid"
      placeholder=""
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-0"
          viewBox="0 0 16 16"
        >
          <path
            d="M3 6.5a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0Zm11.76 6.85-.021-.01-3.71-3.681-.025-.008A5.465 5.465 0 0 0 12 6.5 5.5 5.5 0 1 0 6.5 12a5.47 5.47 0 0 0 3.118-.972l3.732 3.732a1 1 0 0 0 1.41-1.41Z"
          />
        </symbol>
        <use
          href="#icon-search-16"
        />
      </svg>
      <input
        aria-describedby="sM_2 sM_3"
        aria-label="Custom aria label"
        class="textbox__control"
        id="GENERATED-1"
        type="search"
      />
      <button
        aria-label="Clear the text"
        class="icon-btn icon-btn--transparent icon-btn--small"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon icon--16"
        >
          <symbol
            id="GENERATED-2"
            viewBox="0 0 16 16"
          >
            <path
              d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0Zm3.71 10.29a1 1 0 1 1-1.41 1.41L8 9.41l-2.29 2.3A1 1 0 0 1 4.3 10.3L6.59 8l-2.3-2.29a1.004 1.004 0 0 1 1.42-1.42L8 6.59l2.29-2.29a1 1 0 0 1 1.41 1.41L9.41 8l2.3 2.29Z"
            />
          </symbol>
          <use
            href="#icon-clear-16"
          />
        </svg>
      </button>
    </div>
  </span>
</DocumentFragment>
`;

exports[`evo-filter-input > renders without clear button and no placeholder 1`] = `
<DocumentFragment>
  <span
    class="filter-input"
  >
    <div
      class="textbox textbox--fluid"
      placeholder=""
    >
      <svg
        aria-hidden="true"
        class="icon icon--16"
      >
        <symbol
          id="GENERATED-0"
          viewBox="0 0 16 16"
        >
          <path
            d="M3 6.5a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0Zm11.76 6.85-.021-.01-3.71-3.681-.025-.008A5.465 5.465 0 0 0 12 6.5 5.5 5.5 0 1 0 6.5 12a5.47 5.47 0 0 0 3.118-.972l3.732 3.732a1 1 0 0 0 1.41-1.41Z"
          />
        </symbol>
        <use
          href="#icon-search-16"
        />
      </svg>
      <input
        aria-describedby="sM_2 sM_3"
        aria-label="Filter input"
        class="textbox__control"
        id="GENERATED-1"
        type="search"
      />
    </div>
  </span>
</DocumentFragment>
`;
